# yandex-music-cli

./: Cargo.toml  README.md
src/: main.rs  mp3.rs
